Make 2018.1 compatible Create ability to have run configuration to ease debugging